# EnergonAI

./: .gitignore  .pre-commit-config.yaml  .style.yapf  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  copy0525.yml  n_energon.yml  requirements.txt  server.sh  setup.py  test_query.sh
docker/: Dockerfile  launch.sh
energon/: core.py  initialize.py
energon/builder/: pipeline.py
energon/cli/: __init__.py  service.py
energon/communication/: collective.py  p2p.py  ring.py  utils.py
energon/context/: config.py  parallel_context.py
energon/engine/: __init__.py  bert_pipeline_wrapper.py  engine.py  gpt_pipeline_wrapper.py  pipeline_meta.py  pipeline_msg_dict.py  pipeline_wrapper.py  rpc_utils.py  rpc_worker.py  server.py  vit_pipeline_wrapper.py
energon/kernel/: __init__.py
energon/kernel/giant_op/csrc/: CMakeLists.txt
energon/kernel/giant_op/csrc/fastertransformer/: open_decoder.h
energon/kernel/giant_op/csrc/fastertransformer/cuda/: cuda_kernels.cu  cuda_kernels.h  multi_head_attention.h  open_attention.cu  open_attention.h
energon/kernel/giant_op/csrc/fastertransformer/th_op/: FusedGPTLayer_wrapper.cc.bak  FusedGPTLayer_wrapper.h  decoder.cc  decoder.h
energon/kernel/giant_op/csrc/fastertransformer/utils/: TorchProcessGroup.hpp  nccl_utils.h
energon/logging/: __init__.py  logging.py
energon/model/: __init__.py
energon/nn/: __init__.py
energon/registry/: __init__.py
energon/server/: __init__.py  batch_manager.py  batch_manager_2.py  engine_server.py  main.py  naive_batch_manager.py  worker_server.py
energon/utils/: __init__.py  checkpointing.py  checkpointing_HF_GPT2.py  checkpointing_hf_gpt2.py  common.py  cuda.py  files.py  timer.py
energonai/: __init__.py  batch_mgr.py  constants.py  engine.py  initialize.py  pipe.py  task.py  worker.py
energonai/cli/: __init__.py  service.py
energonai/communication/: collective.py  p2p.py  ring.py  (+1 more)
example/: bert.sh  bert_inference.py  gpt.sh  gpt_inference.py
examples/: evaluate.py  run_gpt.sh  run_gpt_without_trition.sh  triton_client.py
tests/: run_standalone_tests.sh
(+212 files in other folders)
